Fix spacing

--- a/src/_custom.scss
+++ b/src/_custom.scss
@@ -35,7 +35,7 @@ a {
   text-align: center;
   border-radius: 0.3rem;
   padding: .5rem;
-  margin: .5rem
+  margin: .2rem 0rem .8rem;
 }
 
 .programNav h2 {
